--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,8 +78,8 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.24-19.30.16
-BuildingEscape.LastCompileMethod=Runtime
+BuildingEscape.TimeStamp=2018.07.24-19.35.02
+BuildingEscape.LastCompileMethod=External
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.07.08-23.56.14
@@ -699,7 +699,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1222,6 +1222,18 @@ REINST_DefaultPawn_BP_C_33.Actor=True
 Grabber.Rendering=True
 Grabber.Input=True
 Grabber.Actor=True
+Actor.Actor=True
+BuildingEscapeGameModeBP_C.Tick=True
+BuildingEscapeGameModeBP_C.Classes=True
+BuildingEscapeGameModeBP_C.Game=True
+BuildingEscapeGameModeBP_C.GameMode=True
+GrabberComponent.Variable=True
+GrabberComponent.Sockets=True
+GrabberComponent.Tags=True
+GrabberComponent.ComponentReplication=True
+GrabberComponent.Activation=True
+GrabberComponent.Cooking=True
+GrabberComponent.Events=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1280,5 +1292,64 @@ StaticMeshActor.StaticMesh=True
 
 [MaterialEditor]
 PrimType=1
+
+[DetailCustomWidgetExpansion]
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EndUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+OculusHMDRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 
 
